# bact-mdr-profiler

./: CITATION.cff  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.claude/: settings.json
.claude/skills/add-analysis/: SKILL.md
.claude/skills/agent-bio-review/: SKILL.md
.claude/skills/agent-code-review/: SKILL.md
.claude/skills/agent-integration-review/: SKILL.md
.claude/skills/agent-reliability-review/: SKILL.md
.claude/skills/agent-stats-review/: SKILL.md
.claude/skills/benchmark/: SKILL.md
.claude/skills/cross-tool-check/: SKILL.md
.claude/skills/full-ci/: SKILL.md
.claude/skills/generate-synth-data/: SKILL.md
.claude/skills/lint/: SKILL.md
.claude/skills/reliability-check/: SKILL.md
.claude/skills/review-stats/: SKILL.md
.claude/skills/run-tests/: SKILL.md
.claude/skills/selfcheck/: SKILL.md
.claude/skills/validate-config/: SKILL.md
.claude/skills/validate-on-real/: SKILL.md
.claude/skills/validate-on-synth/: SKILL.md
.github/: copilot-instructions.md
docs/: anti_salami_checklist.json
examples/: config.yaml
examples/real/: mdr_real.yaml  mdr_real_strict_prod_preset_validation.yaml
src/bactmdrprofiler/: __init__.py  benchmark.py  cli.py  config.py  dashboard_launcher.py  pipeline.py  selfcheck.py
src/bactmdrprofiler/causal/: discovery.py
src/bactmdrprofiler/dashboards/: __init__.py  app.py
src/bactmdrprofiler/gui/: marimo_app.py
src/bactmdrprofiler/mdr/: classification.py  decision_v3.py
src/bactmdrprofiler/network/: hypergraph.py
src/bactmdrprofiler/reliability/: __init__.py  consistency.py
tests/: test_mdr.py  test_validation.py
